--- a/reports/biological-and-biomedical-sciences/def.tex
+++ b/reports/biological-and-biomedical-sciences/def.tex
@@ -56,9 +56,9 @@ head=0ex,foot=3ex}
 \newlength{\myheight}
 \lfoot{
 \settoheight{\myheight}{\thepage}
-\raisebox{-2ex-0.5\myheight}{\includegraphics[height=4ex]{logo}}
+\raisebox{-4ex-0.5\myheight}{\includegraphics[height=7ex]{logo}}
 }
-\cfoot{\color{color2}Recent Alumni Perspectives}
+\cfoot{\color{color2}Ph.D. Exit Survey Results}
 \rfoot{\color{color2}\thepage}
 \renewcommand\headrulewidth{0pt}
 \renewcommand\footrulewidth{0pt}
